style(ui): fixed height for workspace main-content, overflow for chat-content & show newest messages (:bottom of the container)

--- a/src/app/features/workspace/components/chat-interface-content/chat-interface-component.scss
+++ b/src/app/features/workspace/components/chat-interface-content/chat-interface-component.scss
@@ -17,14 +17,20 @@
   flex: 1;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 20px 10px;
   box-sizing: border-box;
+  flex-direction: column-reverse;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &.empty {
-    justify-content: flex-end; /* push content to bottom */
+    justify-content: flex-end;
     align-items: flex-start;
     margin-left: 100px;
   }
